[project]
name = "py-workspace"
version = "0.0.0"
description = "Python workspace root — not published"
requires-python = ">=3.13"
dependencies = []

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = ["ruff>=0.11", "pytest>=8"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["packages/*/tests"]
